--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
+    "@tanstack/react-query": "^5.90.5",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "axios": "^1.12.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "clsx": "^2.1.1",
+    "env": "^0.0.2",
     "expo": "54.0.20",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
@@ -21,9 +28,11 @@
     "react": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-native": "^0.81.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
