--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,15 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
+    "@reduxjs/toolkit": "^2.9.2",
+    "@stripe/stripe-react-native": "^0.55.1",
     "@tanstack/react-query": "^5.90.5",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "axios": "^1.12.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "clsx": "^2.1.1",
     "env": "^0.0.2",
-    "expo": "54.0.20",
+    "expo": "^54.0.21",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -32,7 +34,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-toast-message": "^2.3.3"
+    "react-native-toast-message": "^2.3.3",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
